<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProjetoUnivesp</string>
    <string name="title_activity_main"> </string>
    <string name="ja_cadastrado">já sou cadastrado</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="login">login</string>
    <string name="criar_conta">criar uma conta</string>
    <string name="efetuar_cadastro">efetuar cadastro</string>
    <string name="cadastro_usuario">cadastro de usuário</string>
    <string name="texto_cadastro_usuario">Digite seus dados para ter \n acesso ao sistema</string>
    <string name="nome_completo_">Nome completo:</string>
    <string name="cpf_">CPF:</string>
    <string name="nascimento_">Nascimento:</string>
    <string name="sexo_">Sexo</string>
    <string name="email_">Email:</string>
    <string name="telefone_">Telefone:</string>
    <string name="senha_">Senha:</string>
    <string name="senha2_">Repita a senha:</string>
    <string name="avancar">avançar</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>

    <string name="password_saut">%s@@</string>
    <string name="selecione_plano">Selecione um plano de saúde</string>
    <string name="clique_aqui_para_selecionar_o_plano_de_saude">Clique aqui para selecionar o plano de saúde</string>
    <string name="clique_aqui_para_selecionar_o_convenio">Clique aqui para selecionar um convênio</string>
    <string name="clique_aqui_para_selecionar_o_estado">Clique aqui para selecionar um estado</string>
    <string name="clique_aqui_para_selecionar_a_cidade">Clique aqui para selecionar uma cidade</string>
    <string name="clique_aqui_para_selecionar_a_especialidade">Clique aqui para selecionar uma especialidade</string>
    <string name="clique_aqui_para_selecionar_a_clinica">Clique aqui para selecionar uma clínica</string>
    <string name="enviar">enviar</string>
    <string name="confirmar">confirmar</string>
    <string name="selecione_convenio">Selecione um convênio</string>
    <string name="carregando">Carregando…</string>
    <string name="home">Home</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="notificacao">Notificação</string>
    <string name="iniciar_agendamento">iniciar agendamento</string>
    <string name="texto_iniciar_agendamento">Escolha uma clínica ou especialidade \n que deseja marcar consulta</string>
    <string name="texto_finalizado_agendamento">O agendamento da sua consulta \n foi marcado com sucesso</string>
    <string name="clinicas">clínicas</string>
    <string name="especialidade">especialidade</string>
    <string name="especialidades_clinicas">Especialidade e Clínicas</string>
    <string name="exames">exames</string>
    <string name="t_tfavoritos">\t\tFavoritos</string>
    <string name="t_tdependentes">\tDependentes</string>
    <string name="email_invalido">Email inválido</string>
    <string name="email_senha_invalido">email ou senha inválida</string>
    <string name="nome_invalido">Nome inválido</string>
    <string name="cpf_invalido">CPF inválido</string>
    <string name="data_invalida">Data inválido</string>
    <string name="sexo_nao_selecionado">Sexo não selecionado</string>
    <string name="telefone_invalido">Telefone inválido</string>
    <string name="senha_8_caracteres">A senha precisa ter 8 caracteres</string>
    <string name="senhas_nao_batem">As senhas não batem</string>
    <string name="estado_cidade">Estado e Cidade</string>
    <string name="selecione_estado">Selecione um estado</string>
    <string name="selecione_cidade">Selecione uma cidade</string>
    <string name="selecione_clinica_marcar">Selecione a clínica que deseja marcar consulta</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="selecione_especialidade">Selecione uma especialidade</string>
    <string name="convenio">Convênio</string>
    <string name="carterinha">Carterinha</string>
    <string name="medico_data_hora"> Data Hora da Consulta</string>
    <string name="meu_agendamento">Meu Agendamento</string>
    <string name="confirmar_agendamento">confirmar agendamento</string>
    <string name="agendamento_marcado">Agendamento Marcado</string>

</resources>