<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="100">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_convenio"
        app:tint="@android:color/darker_gray"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/convenio"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/green"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sh_fg_btn_convenio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/clique_aqui_para_selecionar_o_convenio"
        android:gravity="center"
        android:background="@drawable/bg_rounded_green"
        android:textColor="@drawable/bg_btn_text_green_white"
        android:padding="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/sh_fg_btn_plano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/clique_aqui_para_selecionar_o_plano_de_saude"
        android:gravity="center"
        android:background="@drawable/bg_rounded_green"
        android:textColor="@drawable/bg_btn_text_green_white"
        android:padding="8dp"
        android:visibility="gone"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/sh_fg_edt_carterinha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/carterinha"
        android:gravity="center"
        android:background="@drawable/bg_rounded_green"
        android:textColor="@drawable/bg_btn_text_green_white"
        android:padding="8dp"
        android:visibility="gone"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sh_fg_btn_avancar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_rounded_green_inverse"
        android:text="@string/avancar"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="8dp"
        android:visibility="gone"
        android:textStyle="bold" />

</LinearLayout>